syntax = "proto3";

package prod_service.products.v1;

import "filter/v1/filter.proto";
import "prod_service/products/v1/product.proto";

option go_package = "my-first-go-project/gen/go/prod/products/v1;pb_prod_products";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
  rpc AllProducts(AllProductsRequest) returns (AllProductsResponse) {}
}

message CreateProductRequest {
  // Name
  string name = 1;
  // Description
  string description = 2;
  // Image ID
  string image_id = 3;
  // Price
  string price = 4;
  // Prince Currency
  uint32 currency_id = 5;
  // Rating
  uint32 rating = 6;
  // Category ID
  string category_id = 7;
  // Specification
  string specification = 8;
}

message CreateProductResponse {
  Product product = 1;
}

message AllProductsRequest {
  filter.v1.Pagination pagination = 1;
  filter.v1.StringFieldFilter name = 2;
  filter.v1.StringFieldFilter description = 3;
  filter.v1.IntFieldFilter price = 4;
  filter.v1.IntFieldFilter rating = 5;
  filter.v1.StringFieldFilter category_id = 6;
}

message AllProductsResponse {
  repeated Product product = 1;
}
